Added Jacoco to the build. does not work in my sonar for some reason :/